# cpp_learn

./: .gitignore  readme.md
0_header_test/: CMakeLists.txt
0_header_test/cmake/: Config.cmake.in
0_header_test/include/: test1.h  test2.h
0_header_test/src/: test1.cpp  test2.cpp
0_linux_cpp/: 1_time.cpp  2_dir.cpp  3_signal.cpp  4_process.cpp  CMakeLists.txt  test_ros.cpp
1_base_img2/: CMakeLists.txt  main.cpp
1_quote_memory/: 3_quote.cpp  4_quote_return.cpp  5_const_quote.cpp  6_reload_func.cpp  7_student_class.cpp  8_cube_example.cpp  9_circles_point.cpp  CMakeLists.txt  inn_area.cpp  new_memory.cpp  quick_make.sh  test.sh
1_quote_memory/include/: circles.h  point.h
1_quote_memory/src/: circles.cpp  point.cpp
2_constr_and_destr/: 10_assignment_reload.cpp  11_relation_reload.cpp  1_constr.cpp  2_series_constr.cpp  3_deep_and_shallow.cpp  4_static_class.cpp  5_this.cpp  6_const_func.cpp  7_plus_reload.cpp  8_shift_left_reload.cpp  9_add_reload.cpp  CMakeLists.txt
3_inheritance/: 1_inherit_test.cpp  2_polymorphism.cpp  4_code_test.cpp  5_pol_test.cpp  6_vir_destructor.cpp  CMakeLists.txt
4_cv_test/: CMakeLists.txt  main.cpp  test1.cpp  test_video copy.cpp  test_video.cpp
4_opencv_learn/: 10_strokes_track.cpp  11_CamScanner.cpp  1_load_image.cpp  2_load_video.cpp  2_show_video.cpp  3_base_func.cpp  4_resize_crop.cpp  5_drawShaps_texts.cpp  6_wrap_image.cpp  7_detect_color.cpp  8_find_shapes.cpp  9_face_detection.cpp  CMakeLists.txt  CMakePresets.json  CMakePresets_copy.json  README.md
4_opencv_learn/1_base_img/: 1_show_image.cpp  CMakeLists.txt
4_template/: 1_template.cpp  2_template_limitation.cpp  3_class_template.cpp  4_timing_template.cpp  CMakeLists.txt
5_socket/: CMakeLists.txt  client.cpp
6_STL/: 1_learn_STL  2_self_class_vector
6_STL/deque_use/: 1_deque.cpp  CMakeLists.txt
6_STL/list_use/: 1_list.cpp  2_insert_delete.cpp  CMakeLists.txt
6_STL/list_use/include/: printSTL.h
6_STL/set_use/: 1_set.cpp  CMakeLists.txt
6_STL/string_use/: 1_string  1_string.cpp  2_string_assign.cpp  3_string_find.cpp  4_substract_str.cpp  CMakeLists.txt
6_STL/vector_use/: 1_learn_STL.cpp  2_self_class_vector.cpp  3_nest_stl.cpp  4_vector_constro.cpp  5_insert_del.cpp  6_swap.cpp  CMakeLists.txt
6_STL/vector_use/include/: print_vector.h
leetcode_exame/: 1_one_two_bits.cpp  2_alphabet_diff.cpp  2_alphabet_diff_AI.cpp  3_sort.cpp  3_sort_test.cpp  4_move_zero  4_move_zero.cpp  5_take_in_water.cpp  5_take_in_water_self.cpp  6_find_palindrome_arr.cpp  6_find_palindrome_arr_self.cpp  7_three_nums_sum.cpp  7_two_nums_sum.cpp  CMakeLists.txt
modern_cpp/1_start/: 1_constexpr  1_constexpr.cpp  2_1  2_1.cpp  2_initializer_list  2_initializer_list.cpp  CMakeLists.txt
