cmake_minimum_required(VERSION 3.11)
project(leetcode_exame)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Debug)
add_executable(1_one_two_bits 1_one_two_bits.cpp)
add_executable(2_alphabet_diff 2_alphabet_diff.cpp)
add_executable(2_alphabet_diff_AI 2_alphabet_diff_AI.cpp)
add_executable(3_sort 3_sort.cpp)
add_executable(3_sort_test 3_sort_test.cpp)
add_executable(4_move_zero 4_move_zero.cpp)
add_executable(5_take_in_water 5_take_in_water.cpp)
add_executable(5_take_in_water_self 5_take_in_water_self.cpp)
add_executable(6_find_palindrome_arr 6_find_palindrome_arr.cpp)
add_executable(6_find_palindrome_arr_self 6_find_palindrome_arr_self.cpp)
add_executable(7_two_nums_sum 7_two_nums_sum.cpp)
add_executable(7_three_nums_sum 7_three_nums_sum.cpp)
add_executable(8_test 8_test.cpp)
